RESOLVED FIXED193811
iOS: inputmode="none" disables hardware keyboard's globe key
https://bugs.webkit.org/show_bug.cgi?id=193811
Summary iOS: inputmode="none" disables hardware keyboard's globe key
Ryosuke Niwa
Reported 2019-01-24 20:40:35 PST
Setting inputmode="none" makes it impossible to change the keyboard type in hardware keyboard.
Attachments
Unsupports inputmode=none for now (13.21 KB, patch)
2019-01-24 22:59 PST, Ryosuke Niwa
no flags
Ryosuke Niwa
Comment 1 2019-01-24 22:59:17 PST
Created attachment 360084 [details] Unsupports inputmode=none for now
Ryosuke Niwa
Comment 2 2019-01-24 23:05:05 PST
Wenson Hsieh
Comment 3 2019-01-25 08:22:33 PST Comment hidden (obsolete)
Wenson Hsieh
Comment 4 2019-01-25 08:25:26 PST
(In reply to Wenson Hsieh from comment #3) > Comment on attachment 360084 [details] > Unsupports inputmode=none for now > > Should we additionally remove the inputMode attribute from the HTMLElement > interface? Oops, sorry — what I meant to say was, should we additionally remove support for inputmode="none" when parsing/canonicalizing the inputmode attribute? (i.e. the logic in InputMode.cpp).
Ryosuke Niwa
Comment 5 2019-01-25 12:16:50 PST
(In reply to Wenson Hsieh from comment #4) > (In reply to Wenson Hsieh from comment #3) > > Comment on attachment 360084 [details] > > Unsupports inputmode=none for now > > > > Should we additionally remove the inputMode attribute from the HTMLElement > > interface? > > Oops, sorry — what I meant to say was, should we additionally remove support > for inputmode="none" when parsing/canonicalizing the inputmode attribute? > (i.e. the logic in InputMode.cpp). Perhaps but I'm worried that such a change poses a more compatibility risk than not. Since inputmode is a hint, I think it's safer to ignore it. I could be proven wrong though...
Wenson Hsieh
Comment 6 2019-01-25 12:17:39 PST
(In reply to Ryosuke Niwa from comment #5) > (In reply to Wenson Hsieh from comment #4) > > (In reply to Wenson Hsieh from comment #3) > > > Comment on attachment 360084 [details] > > > Unsupports inputmode=none for now > > > > > > Should we additionally remove the inputMode attribute from the HTMLElement > > > interface? > > > > Oops, sorry — what I meant to say was, should we additionally remove support > > for inputmode="none" when parsing/canonicalizing the inputmode attribute? > > (i.e. the logic in InputMode.cpp). > > Perhaps but I'm worried that such a change poses a more compatibility risk > than not. Since inputmode is a hint, I think it's safer to ignore it. I > could be proven wrong though... Fair enough. I guess we'll see!
Ryosuke Niwa
Comment 7 2019-01-25 12:45:05 PST
Comment on attachment 360084 [details] Unsupports inputmode=none for now Clearing flags on attachment: 360084 Committed r240497: <https://trac.webkit.org/changeset/240497>
Ryosuke Niwa
Comment 8 2019-01-25 12:45:08 PST
All reviewed patches have been landed. Closing bug.
Shawn Roberts
Comment 9 2019-01-30 12:13:50 PST
The following test is a flaky crash on MacOS Debug http/tests/resourceLoadStatistics/prune-statistics.html Flakiness Dashboard: https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=http%2Ftests%2FresourceLoadStatistics%2Fprune-statistics.html Probable cause: Can reproduce crash starting with Debug build 240497 to current 240715 with the following command: run-webkit-tests http/tests/resourceLoadStatistics/prune-statistics.html --iterations 500 -f --debug --exit-after-n-failures=1 --no-retry-failures Crash log: https://build.webkit.org/results/Apple%20High%20Sierra%20Debug%20WK2%20(Tests)/r240710%20(6440)/http/tests/resourceLoadStatistics/prune-statistics-crash-log.txt Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.JavaScriptCore 0x000000010d3aeb10 WTFCrash + 16 (Assertions.cpp:255) 1 com.apple.JavaScriptCore 0x000000010d3aeb29 WTFCrashWithSecurityImplication + 9 2 com.apple.WebKit 0x0000000105a2a262 WTF::RefCountedBase::ref() const + 66 (RefCounted.h:43)
Ryosuke Niwa
Comment 10 2019-01-30 20:01:46 PST
I think you commented on a wrong bug? This change only affects iOS code so it can't possibly regress a macOS debug test.
Shawn Roberts
Comment 11 2019-01-31 08:32:56 PST
I apologize, I commented on this bug in error. (In reply to Ryosuke Niwa from comment #10) > I think you commented on a wrong bug? This change only affects iOS code so > it can't possibly regress a macOS debug test.
Note You need to log in before you can comment on or make changes to this bug.